# envoi

./: .env.example  .gitignore  AGENTS.md  LICENSE  PLANS.md  README.md  models.py  offline_replay.py  orchestrate.py  plan.md  poller.py  pyproject.toml  pyrightconfig.json  runner.py  s3_upload.py  task.py  tracker.py  writer.py
.codex/: config.toml
.github/workflows/: publish.yml
.zed/: settings.json
_trace_code_import/: .env.example  AGENTS.md
_trace_code_import/agents/: README.md  opencode.py
_trace_code_import/sandbox/: README.md  __init__.py
_trace_code_import/sandbox/modal/: __init__.py  backend.py  deploy.py
_trace_code_import/scripts/: trace.py
_trace_code_import/utils/: evaluation.py  helpers.py  parsing.py  solve.py
agents/: __init__.py  base.py  codex.py  opencode.py  setup.py
docs/: introduction.mdx  mint.json
environment/: main.py
environment/tests/: c_testsuite.py  torture.py  utils.py  wacct.py
envoi/: Dockerfile.base  __init__.py  backend_local.py  cli.py  client.py  constants.py  deploy.py  environment.py  runtime.py  utils.py
examples/: README.md
examples/c_compiler/author/: Dockerfile  c_compiler.py  main.py  pyproject.toml
examples/c_compiler/client/: display.py  main.py  pyproject.toml  run.py
examples/c_compiler/environment/: Dockerfile  lint.sh  main.py  params.py  pyrightconfig.json
examples/c_compiler/task/: en.md  prompt.md  task.py
examples/environments/c_compiler/: Dockerfile
examples/gameboy_emulator/environment/: Dockerfile  lint.sh  main.py  params.py
examples/gameboy_emulator/task/: en.md  prompt.md  pyrightconfig.json  task.py
prompts/: system.txt
sandbox/: README.md  __init__.py  base.py  codex_client.py  mcp_server.py  opencode.jsonc  opencode_client.py  setup.sh
sandbox/e2b/: __init__.py  backend.py
sandbox/modal/: backend.py  deploy.py  mcp_server.py  setup.sh
scripts/: README.md  graph_trace.py  offline_replay.py  trace.py
tasks/: resolver.py
tasks/c_compiler/: task.py
typings/pytest/: __init__.pyi
utils/: evaluation.py  git.py  helpers.py  solve.py  storage.py  stream.py  trace_parquet.py
(+113 files in other folders)
