[project]
name = "envoi-workspace"
version = "0.1.0"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "envoi",
    "envoi-code",
    "envoi-cli",
]

[tool.uv.workspace]
members = ["packages/envoi", "packages/code", "packages/cli"]

[tool.uv.sources]
envoi = { workspace = true }
envoi-code = { workspace = true }
envoi-cli = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "all"
failOnWarnings = true
reportUnreachable = "error"
include = [
    "packages/envoi/envoi",
]
extraPaths = [
    "packages/envoi",
]
exclude = [
    ".venv",
    "**/.venv/**",
    "**/*.egg-info/**",
    "output",
    "**/node_modules/**",
]
executionEnvironments = [
    { root = "packages/envoi" },
]

[tool.mypy]
python_version = "3.12"
strict = true
